<resources>
    <string name="app_name">Health Care</string>
    <string name="login_username">User Name</string>
    <string name="login_password">Password</string>
    <string name="login_text">LOGIN</string>
    <string name="sign_up_btn_text">CREATE NEW ACCOUNT</string>
    <string name="login_btn_load_color">white</string>
    <string name="doctor_name">DOCTOR NAME</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="description">Description</string>
    <string name="update">Update</string>
    <string name="address">Address</string>
    <string name="specilization">Specilization</string>
    <string name="hospital">Hospital</string>
    <string name="available_time">Available Time</string>
    <string name="time_from">Time From</string>
    <string name="time_to">Time To</string>
    <string name="location">Location</string>
    <string name="add_time">Add Time</string>
    <string name="available_times">Available Times</string>
    <string name="sign_up">Sign Up</string>
    <string name="appointments">Appointments</string>
    <string name="patient_name">Patient Name</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="home_welcome">Hello Tharindu</string>
    <string name="home_appname">Health Care</string>
    <string name="home_searchbar">Search Your Doctor</string>
    <string name="doctor_service">Doctor Service</string>
    <string name="doctor_service1">Doctor Service</string>
    <string name="pharmacy_and_prescription">Pharmacy and Prescription</string>
    <string name="upload_prescription">Upload Prescription</string>
    <string name="quick_service">Quick Service</string>
    <string name="call_1990">Call 1990</string>
    <string name="ambulence_service_1990">Ambulence Service 1990</string>
    <string name="next">Next</string>
    <string name="dt">dt</string>
    <string name="todo">TODO</string>
    <string name="select_a_doctor">Select a Doctor</string>
    <string name="create_an_appointment">Create an Appointment</string>
    <string name="Create">Create</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="dob">Date Of Birth</string>
    <string name="add_date">Add Date</string>
    <string name="my_appointments">My Appointments</string>
    <string name="enter_details">Enter Your Details</string>
    <string name="save">save</string>
    <string name="age">Age</string>
    <string name="edit_doctor">Edit Details</string>
    <string name="confirm_text">Do you want to update?</string>
    <string name="no_text">No</string>
    <string name="yes_text">Yes</string>
    <string name="channel_list">Channel List</string>
    <string name="bim">Calculate BMI</string>
    <string name="height">Height</string>
    <string name="Weight">Weight</string>
    <string name="viewAppointment">view appointment</string>
    <string name="updadeProfile">Updade Profile</string>
    <string name="logout">logout</string>
    <string name="deleteAccount">delete account</string>
    <string name="callCovic">Call 1390</string>
    <string name="callCovid">call 1390</string>
</resources>