<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="25dp">

            <TextView
                android:id="@+id/text_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"
                android:text="@string/confirm_text"/>

            <Button
                android:id="@+id/conf_no_btn"
                android:text="@string/no_text"
                android:backgroundTint="@color/design_default_color_error"
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/conf_ok_btn"
                android:text="@string/yes_text"
                android:backgroundTint="@color/design_default_color_primary_variant"
                android:layout_alignParentRight="true"
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>