<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="8dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="TODO" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/patient_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/patient_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age" />

            <TextView
                android:id="@+id/patient_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mobile" />

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
