<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".signUpUi">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="0dp"
            android:layout_height="590dp"
            android:layout_marginTop="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView25"
            app:srcCompat="@drawable/header" />

        <EditText
            android:id="@+id/sign_up_first_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="86dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/login_edit_text"
            android:ems="10"
            android:hint="@string/firstName"
            android:inputType="textPersonName"
            android:paddingLeft="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView5" />

        <EditText
            android:id="@+id/sign_up_last_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/login_edit_text"
            android:ems="10"
            android:hint="@string/lastName"
            android:inputType="textPersonName"
            android:paddingLeft="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_first_name" />

        <EditText
            android:id="@+id/sign_up_dob"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/login_edit_text"
            android:ems="10"
            android:hint="@string/dob"
            android:inputType="textPersonName"
            android:paddingLeft="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_last_name" />

        <EditText
            android:id="@+id/sign_up_age"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/login_edit_text"
            android:ems="10"
            android:hint="@string/age"
            android:inputType="number"
            android:paddingLeft="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_dob" />

        <EditText
            android:id="@+id/sign_up_address"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/login_edit_text"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPersonName"
            android:paddingLeft="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_age" />

        <EditText
            android:id="@+id/sign_up_patient_mobile"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/login_edit_text"
            android:ems="10"
            android:hint="@string/mobile"
            android:inputType="number"
            android:paddingLeft="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_address" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/enter_details"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/patientSaveBtn"
            android:layout_width="282dp"
            android:layout_height="54dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/buttontype02"
            android:text="@string/save"
            app:backgroundTint="@android:color/holo_blue_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/patientDetailsEnterProgressBar" />

        <ProgressBar
            android:id="@+id/patientDetailsEnterProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="606dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView5" />

        <ImageView
            android:id="@+id/patientDp"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/sign_up_first_name"
            app:layout_constraintEnd_toStartOf="@+id/selectPatientImageBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@+id/textView25"
            app:srcCompat="@drawable/doctor_illustration" />

        <ImageButton
            android:id="@+id/selectPatientImageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/patientDp"
            app:layout_constraintEnd_toStartOf="@+id/imageView5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/patientDp"
            app:layout_constraintTop_toTopOf="@+id/patientDp"
            app:srcCompat="@android:drawable/ic_menu_camera" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>