<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="0dp"
            android:layout_height="309dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="248dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView8"
            app:srcCompat="@drawable/header" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="201dp"
            android:layout_height="186dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView24"
            app:srcCompat="@drawable/doctor1" />

        <EditText
            android:id="@+id/Uemail"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="17dp"
            android:background="@drawable/login_edit_text"
            android:drawableStart="@drawable/ic_email"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:paddingLeft="12dp"
            app:layout_constraintBottom_toTopOf="@+id/Upassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView8" />

        <EditText
            android:id="@+id/Upassword"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="108dp"
            android:background="@drawable/login_edit_text"
            android:drawableStart="@drawable/ic_password"
            android:ems="10"
            android:hint="@string/login_password"
            android:inputType="textPersonName|textPassword"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="122dp"
            android:layout_height="52dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/imprima"
            android:text="@string/login_text"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="282dp"
            android:layout_height="54dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/buttontype02"
            android:text="@string/login_text"
            app:backgroundTint="@android:color/holo_blue_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginProgressBar" />

        <Button
            android:id="@+id/redirect_sign_up"
            android:layout_width="282dp"
            android:layout_height="54dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn03style"
            android:text="@string/sign_up"
            android:textColor="#045377"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.467"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginBtn"
            app:layout_constraintVertical_bias="0.19999999" />

        <ProgressBar
            android:id="@+id/loginProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
